// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List Tests List test renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFF",
      "borderBottomWidth": 0.5,
      "borderColor": "#cbd2d9",
      "borderTopWidth": 0.5,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "transparent",
        "borderBottomColor": "#ededed",
        "borderBottomWidth": 0.5,
        "flex": 1,
        "flexDirection": "row",
        "paddingBottom": 10,
        "paddingLeft": 20,
        "paddingRight": 10,
        "paddingTop": 10,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#43484d",
            "flex": 1,
            "fontSize": 14,
          }
        }
      >
        ListItem
      </Text>
    </View>
  </View>
</View>
`;

exports[`List Tests ListItem test renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "transparent",
      "borderBottomColor": "#ededed",
      "borderBottomWidth": 0.5,
      "flex": 1,
      "flexDirection": "row",
      "paddingBottom": 10,
      "paddingLeft": 20,
      "paddingRight": 10,
      "paddingTop": 10,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#43484d",
          "flex": 1,
          "fontSize": 14,
        }
      }
    >
      ListItem
    </Text>
  </View>
</View>
`;
